# gamlakartor

./: .gitignore  index.html  kartor.html  mapviewer.html  om.html
back/: dune  gkback.ml  maplibrarian.ml  testhtml.ml
css/: main.css
front/: index.html  kartor.html  mapviewer.html  om.html
front/configurations/holstebromatrikel/: configuration.json
front/configurations/scandinavia1700/: configuration.json
front/configurations/stockholm1700/: configuration.json
front/configurations/upsala1770/: configuration.json
front/css/: fonts.css  kartor.css  main.css  map.css
front/js/: map.js
front/layers/alvin-record/192065/: GCP.points  meta.json
front/layers/alvin-record/93579/: meta.json
front/layers/geodatastyrelsen/7643/: GCP.points  meta.json
front/layers/geodatastyrelsen/7644/: GCP.points  meta.json
front/layers/geodatastyrelsen/7645/: GCP.points  meta.json
front/layers/geodatastyrelsen/7646/: GCP.points  meta.json
front/layers/geodatastyrelsen/7647/: GCP.points  meta.json
front/layers/geodatastyrelsen/7648/: GCP.points  meta.json
front/layers/geodatastyrelsen/7649/: GCP.points  meta.json
front/layers/geodatastyrelsen/7650/: GCP.points  meta.json
js/: map.js
layers/alvin-record/192065/: meta.json
mapindexer/: dune  mapindexer.ml
mapindexer/oldmap/: oldmap.atd
maps/Stockholm/1700/: leaflet.html
maps/Stockholm/1700/js/: map.js
maps/Uppsala/1770/: GCP.points  leaflet.html
maps/Uppsala/1770/js/: map.js
tools/: dune  generate_tiles.ml  mapindexer.ml  set_path.sh  translate_and_warp.ml
tools/oldmap/: dune  oldmap.atd
(+4 files in other folders)
